<?xml version="1.0"?>
<package>
  <name>drift_correction</name>
  <version>0.1.0</version>
  <description>The drift_correction package</description>
  <maintainer email="maciej.zurad@gmail.com">asiron</maintainer>

  <license>Attribution-NonCommercial 3.0</license>

  <url type="website">http://wiki.ros.org/drift_correction</url>

  <author email="maciej.zurad@gmail.com">Maciej Zurad</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>ar_pose_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>ar_pose_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>

  <export>
  </export>
</package>